--- a/css/style.css
+++ b/css/style.css
@@ -196,7 +196,7 @@ button[type=submit] {
 
     .full-page {
         background: radial-gradient(#0587D5, #0d384a);
-        height: 200vh;
+        height: 1corrected height00vh;
     }
 
     #MenuItems a {
